# pyALF

./: .readthedocs.yaml  README.md  function_scratch.py  functions_pyALF.py  installation.md  myfuncpyNorm.py  pyALF.ipynb  pyproject.toml  random.py  requirements.txt  trial.ipynb
Example/: J121930+494052.asdf  resultlist_J121930+494052.pkl  selected_res_J121930+494052.pkl
docs/: conf.py  functions_pyALF.rst  index.html  index.rst  temp.txt
docs/_build/doctrees/: environment.pickle  functions_pyALF.doctree  index.doctree  pyALF.doctree
docs/_build/html/: .buildinfo  functions_pyALF.html  genindex.html  index.html  objects.inv  py-modindex.html  pyALF.html  search.html  searchindex.js
docs/_build/html/_sources/: functions_pyALF.rst.txt  index.rst.txt  pyALF.rst.txt
pyALF/: __init__.py  functions_pyALF.py  multiprocessingpart.py  pipeline.py  pyALF.py  pyALF_attempt.py  test.ipynb  test.py
test/: random.py
tests/: pyALF.ipynb
