[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyALF"
version = "0.1.0"

[tool.setuptools.dynamic]
dependencies = {
'scipy',
'pandas',
'scikit-learn',
'asdf',
'spectres',
'Pickle5',
'astropy',
'matplotlib',
'cython',
'pytest',
'ipykernel',
'astroquery',
'pytz'

}

[tool.setuptools]
py-modules = []
